# crab_bucket_mentality

./: .tmuxify.layout  Cargo.toml  icons.toml  structure.txt
src/: hyprland.rs  main.rs  program_paths.rs  style.css  workspaces.rs
