[package]
name = "crab_pit_mentality"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
freedesktop_entry_parser = "1.3.0"
gio = "0.20.12"
gtk = { version = "0.9.7", package = "gtk4" }
gtk4-layer-shell = "0.5.0"
regex = "1.11.1"
serde = {version= "1.0.219", features= ["derive"] }
toml = "0.8.23"
winit = "0.30.11"
